netbird-operator-oke/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    toolkit.fluxcd.io/tenant: netbird-operator
  name: netbird-operator
