netbird-operator-oke/oke-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbird-management-proxy
  namespace: netbird
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netbird-management
  template:
    metadata:
      labels:
        app: netbird-management
    spec:
      containers:
      - name: tcp-proxy
        image: alpine/socat:1.8.0.1
        command: ["socat", "TCP-LISTEN:80,fork,reuseaddr", "TCP:netbird.lag0.com.br:443"]
        ports:
        - containerPort: 80
