netbird-operator-oke/management-grpc-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    networking.istio.io/appProtocol: grpc
  name: netbird-management-grpc
  namespace: netbird-operator
spec:
  type: ClusterIP
  ports:
  - name: grpc-backcompat
    port: 9996
    protocol: TCP
    targetPort: 9996
  selector:
    app: wg-server
