netbird-operator-oke/management-services.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    networking.istio.io/appProtocol: grpc
  name: netbird-management
  namespace: netbird
spec:
  clusterIP: None
  ports:
  - name: grpc
    port: 80
    protocol: TCP
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: netbird-signal
  namespace: netbird
spec:
  clusterIP: None
  ports:
  - name: grpc
    port: 80
    protocol: TCP
    targetPort: 80
