netbird-operator-oke/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: netbird-dashboard
  namespace: netbird-operator
spec:
  hosts:
    - netbird.lag0.com.br
  gateways:
    - istio-system/lag0-gateway
  http:
    - match:
      - uri:
          prefix: /api/
      route:
      - destination:
          host: netbird-management.netbird.svc.cluster.local
          port:
            number: 80
    - match:
      - uri:
          prefix: /netbird.
      route:
      - destination:
          host: netbird-management.netbird.svc.cluster.local
          port:
            number: 80
    - match:
      - uri:
          prefix: /netbird.v1.SignalExchange/
      route:
      - destination:
          host: netbird-signal.netbird.svc.cluster.local
          port:
            number: 80
    - route:
      - destination:
          host: netbird-dashboard.netbird.svc.cluster.local
          port:
            number: 80
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: netbird-management
  namespace: netbird-operator
spec:
  hosts:
    - nb.lag0.com.br
  gateways:
    - istio-system/lag0-gateway
  http:
    - match:
      - uri:
          prefix: /netbird.v1.ManagementService/
      route:
      - destination:
          host: netbird-management-grpc.netbird.svc.cluster.local
          port:
            number: 33073
    - route:
      - destination:
          host: netbird-management.netbird.svc.cluster.local
          port:
            number: 80
